[package]
name = "is31fl3730"
version = "0.1.0"
authors = ["Michael Zill <michael.zill@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["esp-idf", "esp32"]
repository = "https://github.com/taunusflieger/is31fl3730"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
embedded-hal-async = "0.1.0-alpha.2"
